yaml/dedicated-ingress-class.yaml
# This will create an IngressClass and AviInfraSetting to support an Ingress having
# a dedicated Virtual Service (when the default sharding is not DEDICATED)
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: avi-ingress-dedicated
spec:
  controller: ako.vmware.com/avi-lb
  parameters:
    apiGroup: ako.vmware.com
    kind: AviInfraSetting
    name: use-dedicated-vs
