yaml/non-standard-port-ingress-class.yaml
# This example creates an IngressClass and AviInfraSetting that would allow
# the associated Ingresses to be exposed via non-standard TCP ports
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: avi-ingress-special
spec:
  controller: ako.vmware.com/avi-lb
  parameters:
    apiGroup: ako.vmware.com
    kind: AviInfraSetting
    name: use-non-standard-http-port
