yaml/tea-coffee-l4-crd.yaml
# This example creates a L4 Virtual Service with:
#  - Custom L4 SSL application profile with mTLS enabled
#  - RSA and EC certificates
---
apiVersion: v1
kind: Service
metadata:
  name: tea-svc-l4-ssl
  labels:
    app: tea
  annotations:
    ako.vmware.com/l4rule: tea-coffee-l4-rule
spec:
  ports:
  - port: 443
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: tea
  type: LoadBalancer
