yaml/tea-coffee-dedicated.yaml
# This example creates an Ingress using the dedicated IngressClass (see dedicated-ingress-class.yaml)
# and also specifies a preferred IP address for the dedicated Ingress and both RSA/EC certificates
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress-dedicated
spec:
  ingressClassName: avi-ingress-dedicated
  rules:
    - host: cafe-dedicated.vs4.rc.demo.avi.local
      http:
        paths:
          - path: /tea
            pathType: Prefix
            backend:
              service:
                name: tea-svc
                port:
                  number: 8080
          - path: /coffee
            pathType: Prefix
            backend:
              service:
                name: coffee-svc
                port:
                  number: 8080
