yaml/tea-coffee-gslb-cluster2.yaml
# This creates an Ingress in cluster 2 and associates it with a GSLB FQDN for AMKO
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-gslb
  labels:
    app: gslb
spec:
  rules:
  - host: cafe-gslb.vs4-2.rc.demo.avi.local
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
         service:
          name: tea-svc
          port:
           number: 8080
      - path: /coffee
        pathType: Prefix
        backend:
         service:
          name: coffee-svc
          port:
           number: 8080
