yaml/tea-coffee-https-ingress.yaml
# This example creates a standard Kubernetes secure Ingress (no Avi-specific constructs)
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress-https
spec:
  rules:
  - host: cafe-https.vs4.rc.demo.avi.local
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
         service:
          name: tea-svc
          port:
           number: 8080
      - path: /coffee
        pathType: Prefix
        backend:
         service:
          name: coffee-svc
          port:
           number: 8080
  tls:
  - hosts:
    - cafe-https.vs4.rc.demo.avi.local
    secretName: wildcard-cert
