yaml/tea-coffee-ingress-crds-1.yaml
# This file defines an Ingress that uses a HostRule to assign a RSA/ECDSA certificates already created on the Controller
# an alias FQDN through which the application can be accessed (public.rc.demo.avi.local)
# and an HTTPRule to specify a custom Health Monitor to be attached to the Pool
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-crd1
spec:
  rules:
    - host: cafe-crd1.vs4.rc.demo.avi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tea-svc
                port:
                  number: 8080
